chore: Update to JDK21 / JDK17 (#1603)
- Migrate lowkey-vault-app and lowkey-vault-docker to JDK 21
- Migrate lowkey-vault-client and lowkey-vault-testcontainers to JDK 17
- Remove previously deprecated methods
- Start using new language features in the updated codebase
- Update and standardize wording in JavaDocs/comments
- Update Java versions in documentation badges
- Update build workflows to use JDK 21
- Update CheckStyle version to 11
- Improve phrasing in README files for clarity

Updates #1602
{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>